<?xml version="1.0"?>
<package format="3">
  <name>dingo_slam</name>
  <version>0.1.8</version>
  <description>Launch files and code for slamming of the Dingo</description>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <exec_depend>slam_toolbox</exec_depend> 
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
